--- a/Association Rules.ipynb
+++ b/Association Rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,41 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'customer_data.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-ee9a04f36113>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcodecs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'customer_data.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mBLOCKSIZE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m512\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'customer_data(utf-8).csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\phil\\appdata\\local\\programs\\python\\python37-32\\lib\\codecs.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(filename, mode, encoding, errors, buffering)\u001b[0m\n\u001b[0;32m    896\u001b[0m         \u001b[1;31m# Force opening of the file in binary mode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    897\u001b[0m         \u001b[0mmode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'b'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 898\u001b[1;33m     \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuffering\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    899\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mencoding\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    900\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'customer_data.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "import codecs\n",
-    "import os\n",
-    "with codecs.open('customer_data.csv', 'r') as file:\n",
-    "    BLOCKSIZE = 512\n",
-    "    if not os.path.exists('customer_data(utf-8).csv'):\n",
-    "        with codecs.open('customer_data(utf-8).csv', \"w\", \"utf-8\") as targetFile:\n",
-    "            while True:\n",
-    "                contents = file.read(BLOCKSIZE)\n",
-    "                if not contents:\n",
-    "                    break\n",
-    "                targetFile.write(contents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +78,7 @@
        "(99981, 11)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +263,7 @@
        "01564720171201180924000113751602  35.0  49.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,24 +302,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pn']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "purchase_list = list(db['transactions'].find({'items.1': { '$exists': True } }, projection=['items']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23288"
+       "{'_id': ObjectId('5cc94a6608c78d51c024704f'),\n",
+       " 'items': [{'品號-品名稱': '31-茶飲料',\n",
+       "   '群號-群名稱': '311-紅茶',\n",
+       "   '銷售單價': 10.0,\n",
+       "   '單品名稱': '麥香紅茶ＴＰ３００',\n",
+       "   'amount': 10.0},\n",
+       "  {'品號-品名稱': '58-香煙',\n",
+       "   '群號-群名稱': '584-進口淡煙',\n",
+       "   '銷售單價': 95.0,\n",
+       "   '單品名稱': '萬寶路金軟包活性碳濾嘴香菸',\n",
+       "   'amount': 95.0}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(purchase_list)"
+    "purchase_list[0]"
    ]
   },
   {
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,10 +381,11 @@
     "        return combinations(itemsets, 2)\n",
     "    result = {}\n",
     "    nodes = set()\n",
-    "    for key, itemsets in purchase_list.items():\n",
+    "    for transaction in purchase_list:\n",
+    "        itemsets = transaction['items']\n",
     "        if len(itemsets) > 1:\n",
     "            for edge_dict_tuple in find_edges_in_list(itemsets):\n",
-    "                edge = tuple([dic['name'] for dic in edge_dict_tuple])\n",
+    "                edge = tuple([dic['單品名稱'] for dic in edge_dict_tuple])\n",
     "                weight = sum([dic['amount'] for dic in edge_dict_tuple])\n",
     "                if edge in result:\n",
     "                    result[edge]['count'] += 1\n",
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -431,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -467,10 +470,10 @@
     {
      "data": {
       "text/plain": [
-       "194"
+       "44"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -513,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -530,10 +533,10 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "20"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "scrolled": false
    },
@@ -553,77 +556,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "優格軟糖（Ｐｅａｃｈ） 潤喉糖－蜂蜜檸檬 超涼口香糖（袋） 優格軟糖（Ｏｒａｎｇｅ） 奶香綠茶３３０ＭＬ ＡＷ極酷嗆涼紫冰野莓口香糖 代收折價卷\n",
+      "蕃薯（１５元） 蕃薯（２０元）\n",
       "==================\n",
-      "雲絲頓紅１０毫克香煙 七星１０毫克硬盒香煙 （新）４５號銷售用購物袋 麥香錫蘭奶茶 伯朗咖啡 純喫茶紅茶 冷泡茶冷萃綠茶無糖 飲冰室茶集紅奶茶 紫米紅豆湯圓 咖啡廣場奶香特調咖啡 麥香阿薩姆奶茶 冷泡茶冰釀烏龍 金牌台啤罐裝（６入） 天然水２．２Ｌ 金蘋果調味乳蘋果風味 麥香紅茶ＴＰ３００ 奶油雞排歐姆蛋燴飯 義美奶茶 鹼性離子水 日式蒜香燒豚飯 金牌台灣啤酒５００ＭＬ 天然水 台鹽海洋鹼性離子水 藍山咖啡 泡沫紅茶ＴＰ３００ （新）銷售用購物袋１８號袋 麥香綠茶ＴＰ３００ 純喫茶無糖綠茶６５０ｍｌ 麥香奶茶ＴＰ３００ 飲冰室茶集綠奶茶 純喫茶綠茶６５０ｍｌ 泡沫綠茶ＴＰ３００ 原萃日式綠茶 蔥爆牛肉燴飯 金牌台灣啤酒 茶裏王日式綠茶 全家克林姆麵包 統一大布丁（雞蛋口味） 可口可樂ＰＥＴ 衛生冰\n",
+      "蝦皮取件Ｃ 商店街取件\n",
       "==================\n",
-      "欣中天然氣 健保費代收 花旗信用卡 勞保費代收 國泰世華卡 勞工退休金 台中二段停 遠傳電信 地方查核稅款 台灣電力 欣林瓦斯費 代收手續費４ 台灣自來水 玉山信用卡 聯邦信用卡 台新信用卡 台灣大哥大 國民年金代 中華電信 中信有線代\n",
+      "高鐵手續費 高鐵取票\n",
       "==================\n",
-      "鮪魚飯糰 簡單點無加糖優酪乳 統一陽光無糖高纖豆漿 義美古早傳統無糖豆奶 全家熱狗麵包 商店街取件 熱拿鐵小杯 鮮奶茶 茶葉蛋（銷售用） 特濃黑可可 蕃薯（２５元） 養樂多 林鳳營全脂鮮乳 光泉無加糖鮮豆漿 肉鬆起酥麵包 蕃薯（２０元） 特濃咖啡拿鐵 香蕉單入 肉鬆飯糰 爆濃起司熱狗 蕃薯（１５元） 光泉米漿 頂級鮮奶優格－莓果穀物脆片 簡單點原味優酪乳 經典原味熱狗 蕃薯（３０元） 雪花蛋糕 ＬＣＡ活菌原味發酵乳 蝦皮取件Ｃ 黑胡椒熱狗\n",
+      "空瓶回收（銷售用） 紅標料理米酒\n",
       "==================\n",
-      "熱拿鐵大杯 冰拿鐵大杯\n",
+      "健保費代收 代收手續費４ 國民年金代\n",
       "==================\n",
-      "台鐵手續費 台鐵取票\n",
+      "台中裁罰單 代收手續費６\n",
       "==================\n",
-      "ｅＴａｇ繳費 通行繳費 代收手續費５\n",
+      "伊藤園蘋果紅茶 促銷券０６\n",
       "==================\n",
-      "黃金魚豆腐 關東煮本舖拉麵 蟹肉糰子 千層玉子燒 野菜多多魚餅 杏鮑菇 黃金厚切魚板 鮮香菇 王子麵 白玉蘿蔔 讚岐烏龍麵 究極味付蛋 日式黑輪 關東煮本舖冬粉 手工高麗菜捲 旗魚黑輪 筊白筍 特級花枝丸 海鮮魚卵棒\n",
+      "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
       "==================\n",
-      "紅標料理米酒 空瓶回收（銷售用）\n",
+      "通行繳費 代收手續費５\n",
+      "==================\n",
+      "戰禍邪神第１１章 戰禍邪神第１２章\n",
+      "==================\n",
+      "麥香奶茶ＴＰ３００ 麥香紅茶ＴＰ３００\n",
+      "==================\n",
+      "寶物交易代 代收手續費２５\n",
       "==================\n",
       "店到店雅虎拍賣手續費 雅虎拍賣寄件\n",
       "==================\n",
-      "商店街寄件Ｗ 雅虎線上寄件 店到店雅虎拍賣線上手續費 露天寄件Ｗ 蝦皮寄件Ｗ\n",
+      "ＦＰ店到店 店到店ＦＰ手續費\n",
       "==================\n",
-      "蘋果日報 聯合報 自由時報\n",
-      "==================\n",
-      "國光購票 國光客運手續費\n",
-      "==================\n",
-      "辣味ＹＵＲＯＣＫ魚薯條無 原味ＹＵＲＯＣＫ魚薯條無\n",
-      "==================\n",
-      "黑巧杏仁乳加 牛奶杏仁乳加\n",
-      "==================\n",
-      "代收手續費１０ 遠銀一般代Ｚ\n",
-      "==================\n",
-      "能多益隨手杯 促銷券０９\n",
-      "==================\n",
-      "台中裁罰單 台銀學雜費 代收手續費６\n",
-      "==================\n",
-      "冰鎮檸檬紅茶６５０ｍｌ 冰鎮芭樂綠茶６５０ｍｌ\n",
+      "蘋果日報 自由時報\n",
       "==================\n",
       "代收手續費１３ 渣打一般３\n",
       "==================\n",
-      "麥香紅茶ＴＰ３７５ 麥香奶茶ＴＰ３７５\n",
+      "代收手續費１５ 玉山淘寶款 雅虎拍賣繳費 中信外１５ 合庫代１５\n",
       "==================\n",
-      "戰禍邪神第１２章 戰禍邪神第１１章\n",
+      "台灣自來水 中華電信\n",
       "==================\n",
-      "特濃抹茶拿鐵 熱美式中杯 熱拿鐵中杯 大口法香烤雞飯糰 大口奶油蕈菇起司雞排飯糰 綠豆沙牛乳\n",
+      "代收折價卷 奶香綠茶３３０ＭＬ\n",
       "==================\n",
-      "代收手續費２５ 寶物交易代\n",
-      "==================\n",
-      "台中裁即銷罰 交通罰鍰代收即銷手續費\n",
-      "==================\n",
-      "火腿青蔬洋芋沙拉 千島醬\n",
-      "==================\n",
-      "Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 伊藤園蘋果紅茶 促銷券０６ 頑皮滷蛋－原味\n",
-      "==================\n",
-      "貝納頌海鹽風味拿鐵 焗烤鮪魚歐姆蛋三明治\n",
-      "==================\n",
-      "芒果冰茶 葡萄冰茶 蘋果冰茶\n",
-      "==================\n",
-      "統聯客運手續費 統聯客運購票\n",
-      "==================\n",
-      "ＭＭ花生巧克力 促銷券１０\n",
-      "==================\n",
-      "店到店ＦＰ手續費 ＦＰ店到店\n",
-      "==================\n",
-      "代收手續費１５ 合庫代１５ 雅虎拍賣繳費 中信外１５ 玉山淘寶款\n",
-      "==================\n",
-      "高鐵取票 高鐵手續費\n",
-      "==================\n",
-      "午后時光王室大吉嶺奶茶 午后時光鐵觀音奶茶\n",
-      "==================\n",
-      "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
+      "台鐵取票 台鐵手續費\n",
       "==================\n"
      ]
     }
@@ -637,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -645,10 +616,10 @@
     {
      "data": {
       "text/plain": [
-       "0.821130910093025"
+       "0.6157882031074606"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -680,19 +651,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': '（新）銷售用購物袋１８號袋', 'betweeness': 2790.0},\n",
-       " {'name': '茶葉蛋（銷售用）', 'betweeness': 2564.0},\n",
-       " {'name': '麥香奶茶ＴＰ３００', 'betweeness': 2011.0},\n",
-       " {'name': '促銷券０６', 'betweeness': 726.0},\n",
-       " {'name': '代收折價卷', 'betweeness': 506.0},\n",
-       " {'name': '熱拿鐵中杯', 'betweeness': 419.0},\n",
-       " {'name': '經典原味熱狗', 'betweeness': 255.0},\n",
-       " {'name': '肉鬆飯糰', 'betweeness': 248.0},\n",
-       " {'name': '鮪魚飯糰', 'betweeness': 173.0},\n",
-       " {'name': '黑胡椒熱狗', 'betweeness': 172.0}]"
+       "[{'name': '代收手續費１５', 'betweeness': 6.0}, {'name': '代收手續費４', 'betweeness': 1.0}]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,51 +665,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 13,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 13,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
+       "[1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 7,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 12,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 15,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
@@ -757,155 +690,34 @@
        " 1,\n",
        " 2,\n",
        " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 2,\n",
-       " 11,\n",
-       " 1,\n",
-       " 1,\n",
-       " 9,\n",
-       " 1,\n",
-       " 4,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 25,\n",
-       " 12,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 4,\n",
-       " 1,\n",
-       " 1,\n",
-       " 16,\n",
-       " 4,\n",
-       " 3,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 6,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 11,\n",
-       " 1,\n",
-       " 12,\n",
-       " 1,\n",
-       " 13,\n",
-       " 1,\n",
-       " 3,\n",
-       " 8,\n",
        " 1,\n",
        " 1,\n",
        " 4,\n",
        " 1,\n",
        " 1,\n",
-       " 13,\n",
-       " 1,\n",
-       " 35,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
-       " 7,\n",
-       " 4,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 5,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 2,\n",
-       " 3,\n",
-       " 2,\n",
-       " 1,\n",
-       " 2,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 12,\n",
-       " 1,\n",
-       " 5,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 3,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 8,\n",
-       " 7,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 11,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 4,\n",
-       " 1,\n",
-       " 14,\n",
-       " 2,\n",
-       " 5,\n",
-       " 14,\n",
-       " 1,\n",
-       " 1,\n",
-       " 2,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 2,\n",
-       " 14,\n",
-       " 4,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 4,\n",
-       " 2,\n",
-       " 2]"
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
