Refactor product network.

--- a/Mongo.ipynb
+++ b/Mongo.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,12 +116,12 @@
     "                    item = dict(item_dict[item_name])\n",
     "                    item['amount'] = data[self.transaction_amount_name]\n",
     "                    ts['items'].append(item)\n",
-    "        return list(transaction_dict.values())"
+    "        return (list(transaction_dict.values()), list(item_dict.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions = transformer.transform(datas)"
+    "transactions, items = transformer.transform(datas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +170,7 @@
        "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'pn')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +245,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_ids = db.items.insert_many(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = db.items.find({ '單品名稱': { '$regex': '倫敦' }}).limit(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('5cdfdab3578a4b56dc404112'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁１毫克香煙'},\n",
+       " {'_id': ObjectId('5cdfdab3578a4b56dc404113'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '585-進口濃煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁１０毫克香菸'},\n",
+       " {'_id': ObjectId('5cdfdab3578a4b56dc404114'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁４毫克香菸'},\n",
+       " {'_id': ObjectId('5cdfdab3578a4b56dc404115'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁７毫克香菸'},\n",
+       " {'_id': ObjectId('5cdfdab3578a4b56dc404116'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路隨選風味香菸３號'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -267,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
