--- a/Product Network.ipynb
+++ b/Product Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "23288"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,15 +145,36 @@
     "                length = len(edge_list)\n",
     "                for edge_dict_tuple in edge_list:\n",
     "                    edge = tuple([dic['單品名稱'] for dic in edge_dict_tuple])\n",
-    "                    weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
-    "                    if edge in result or (edge[1], edge[0]) in result:\n",
-    "                        edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
-    "                        result[edge_in_list]['count'] += 1\n",
-    "                        result[edge_in_list]['weight'] += weight\n",
-    "                    else:\n",
-    "                        result[edge] = {}\n",
-    "                        result[edge]['count'] = 1\n",
-    "                        result[edge]['weight'] = weight\n",
+    "                    if method == 'degree-price':\n",
+    "                        weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                            result[edge_in_list]['weight'] += weight\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
+    "                    elif method == 'degree-original':\n",
+    "                        weight = 1\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                            result[edge_in_list]['weight'] = weight\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
+    "                    elif method == 'degree-mod':\n",
+    "                        weight = 1 / length\n",
+    "                        if edge in result or (edge[1], edge[0]) in result:\n",
+    "                            edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                            result[edge_in_list]['count'] += 1\n",
+    "                            result[edge_in_list]['weight'] += weight\n",
+    "                        else:\n",
+    "                            result[edge] = {}\n",
+    "                            result[edge]['count'] = 1\n",
+    "                            result[edge]['weight'] = weight\n",
     "        for key in list(result.keys()):\n",
     "            if result[key]['count'] < support:\n",
     "                del result[key]\n",
@@ -181,7 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if method == 'degree-price':\n",
+    "#     weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
+    "# elif method == 'degree-original':\n",
+    "#     weight = 1\n",
+    "# elif method == 'degree-mod':\n",
+    "#     weight = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_network = converter.convert()"
+    "product_network = converter.convert(method='degree-mod')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -226,84 +261,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14504.052910052918\n",
-      "戰禍邪神第１１章 戰禍邪神第１２章\n",
+      "65.26084656084657\n",
+      "戰禍邪神第１２章 戰禍邪神第１１章\n",
       "==============\n",
-      "2512.6666666666665\n",
-      "店到店ＦＰ手續費 ＦＰ店到店\n",
+      "55.066190476190435\n",
+      "代收手續費４ 健保費代收 勞保費代收 國民年金代\n",
       "==============\n",
-      "2102.6444444444446\n",
+      "36.65555555555555\n",
+      "ＦＰ店到店 店到店ＦＰ手續費\n",
+      "==============\n",
+      "35.90853257853256\n",
+      "Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 頑皮滷蛋－原味 伊藤園蘋果紅茶 促銷券０６\n",
+      "==============\n",
+      "30.94444444444444\n",
       "空瓶回收（銷售用） 紅標料理米酒\n",
       "==============\n",
-      "1832.2153812853812\n",
-      "伊藤園蘋果紅茶 Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 促銷券０６ 頑皮滷蛋－原味\n",
-      "==============\n",
-      "916.73667998668\n",
-      "蕃薯（１５元） 統一陽光無糖高纖豆漿 蕃薯（２５元） 全家熱狗麵包 鮮奶茶 光泉米漿 鮪魚飯糰 蕃薯（２０元） 茶葉蛋（銷售用） 經典原味熱狗 簡單點無加糖優酪乳 肉鬆飯糰\n",
-      "==============\n",
-      "889.5\n",
-      "熱拿鐵大杯 冰拿鐵大杯\n",
-      "==============\n",
-      "770.0\n",
-      "辣味ＹＵＲＯＣＫ魚薯條無 原味ＹＵＲＯＣＫ魚薯條無\n",
-      "==============\n",
-      "639.3333333333334\n",
-      "雅虎拍賣寄件 店到店雅虎拍賣手續費\n",
-      "==============\n",
-      "554.631746031746\n",
-      "麥香紅茶ＴＰ３００ 鹼性離子水 金牌台啤罐裝（６入） （新）銷售用購物袋１８號袋 麥香奶茶ＴＰ３００ 伯朗咖啡 金牌台灣啤酒\n",
-      "==============\n",
-      "491.53304711161854\n",
-      "黃金厚切魚板 特級花枝丸 白玉蘿蔔 手工高麗菜捲 旗魚黑輪 黃金魚豆腐 究極味付蛋 日式黑輪 讚岐烏龍麵 關東煮本舖拉麵 千層玉子燒 蟹肉糰子 海鮮魚卵棒\n",
-      "==============\n",
-      "432.5460317460317\n",
+      "30.578571428571426\n",
       "台鐵手續費 台鐵取票\n",
       "==============\n",
-      "408.5\n",
-      "中信外１５ 雅虎拍賣繳費 合庫代１５ 代收手續費１５ 玉山淘寶款\n",
+      "25.150000000000006\n",
+      "中信外１５ 代收手續費１５ 雅虎拍賣繳費 合庫代１５ 玉山淘寶款\n",
       "==============\n",
-      "385.8518518518519\n",
+      "24.620370370370367\n",
       "高鐵取票 高鐵手續費\n",
       "==============\n",
-      "333.1198412698413\n",
-      "促銷券１０ ＭＭ花生巧克力\n",
+      "22.28585525585526\n",
+      "經典原味熱狗 統一陽光無糖高纖豆漿 蕃薯（２５元） 蕃薯（１５元） 鮮奶茶 簡單點無加糖優酪乳 蕃薯（２０元） 茶葉蛋（銷售用） 鮪魚飯糰 全家熱狗麵包 肉鬆飯糰 光泉米漿\n",
       "==============\n",
-      "330.0\n",
-      "雅虎線上寄件 店到店雅虎拍賣線上手續費\n",
+      "17.22436507936508\n",
+      "欣林瓦斯費 玉山信用卡 中華電信 國泰世華卡 台灣電力 台新信用卡 台灣自來水 花旗信用卡 台灣大哥大\n",
       "==============\n",
-      "305.8333333333333\n",
-      "自由時報 聯合報 蘋果日報\n",
+      "14.626984126984127\n",
+      "蝦皮取件Ｃ 商店街取件\n",
       "==============\n",
-      "301.2962962962964\n",
-      "寶物交易代 代收手續費２５\n",
+      "12.76409384266527\n",
+      "海鮮魚卵棒 蟹肉糰子 究極味付蛋 手工高麗菜捲 關東煮本舖拉麵 黃金魚豆腐 黃金厚切魚板 特級花枝丸 日式黑輪 白玉蘿蔔 旗魚黑輪 讚岐烏龍麵 千層玉子燒\n",
       "==============\n",
-      "286.87824632883456\n",
-      "優格軟糖（Ｏｒａｎｇｅ） 奶香綠茶３３０ＭＬ 優格軟糖（Ｐｅａｃｈ） 代收折價卷\n",
+      "12.528343094813687\n",
+      "奶香綠茶３３０ＭＬ 優格軟糖（Ｏｒａｎｇｅ） 優格軟糖（Ｐｅａｃｈ） 代收折價卷\n",
       "==============\n",
-      "109.50000000000001\n",
-      "通行繳費 代收手續費５ ｅＴａｇ繳費\n",
+      "12.277777777777779\n",
+      "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
       "==============\n",
-      "101.54829931972786\n",
-      "欣林瓦斯費 台灣自來水 台灣大哥大 台灣電力 國泰世華卡 國民年金代 台新信用卡 代收手續費４ 勞保費代收 花旗信用卡 健保費代收 玉山信用卡 中華電信\n",
+      "12.100000000000001\n",
+      "蘋果日報 聯合報 自由時報\n",
       "==============\n",
-      "47.55079365079365\n",
-      "代收手續費６ 台中裁罰單\n",
+      "11.858333333333329\n",
+      "ｅＴａｇ繳費 代收手續費５ 通行繳費\n",
       "==============\n",
-      "0.3333333333333333\n",
+      "11.385185185185184\n",
+      "代收手續費２５ 寶物交易代\n",
+      "==============\n",
+      "9.733333333333333\n",
       "蝦皮寄件Ｗ 商店街寄件Ｗ\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "商店街取件 蝦皮取件Ｃ\n",
+      "8.78888888888889\n",
+      "店到店雅虎拍賣手續費 雅虎拍賣寄件\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "商店街寄件Ｆ 蝦皮寄件Ｆ\n",
+      "8.678273809523809\n",
+      "金牌台啤罐裝（６入） 伯朗咖啡 麥香奶茶ＴＰ３００ （新）銷售用購物袋１８號袋 鹼性離子水 金牌台灣啤酒 麥香紅茶ＴＰ３００\n",
+      "==============\n",
+      "7.836243386243386\n",
+      "台中裁罰單 代收手續費６\n",
+      "==============\n",
+      "6.4444444444444455\n",
+      "原味ＹＵＲＯＣＫ魚薯條無 辣味ＹＵＲＯＣＫ魚薯條無\n",
+      "==============\n",
+      "6.31931216931217\n",
+      "促銷券１０ ＭＭ花生巧克力\n",
+      "==============\n",
+      "5.566666666666666\n",
+      "冰拿鐵大杯 熱拿鐵大杯\n",
+      "==============\n",
+      "4.111111111111111\n",
+      "雅虎線上寄件 店到店雅虎拍賣線上手續費\n",
       "==============\n"
      ]
     }
@@ -325,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -343,23 +381,24 @@
      "text": [
       "127.0: 茶葉蛋（銷售用）\n",
       "87.0 : （新）銷售用購物袋１８號袋\n",
-      "36.0 : 台灣自來水\n",
-      "33.0 : 中華電信 \n",
+      "43.0 : 中華電信 \n",
       "32.0 : 鮪魚飯糰 \n",
-      "30.0 : 關東煮本舖拉麵\n",
-      "27.0 : 白玉蘿蔔 \n",
       "27.0 : 台新信用卡\n",
+      "23.0 : 國民年金代\n",
       "21.0 : 國泰世華卡\n",
-      "20.0 : 台灣大哥大\n",
-      "17.0 : 光泉米漿 \n",
+      "20.0 : 白玉蘿蔔 \n",
       "17.0 : 經典原味熱狗\n",
-      "11.0 : 國民年金代\n",
-      "11.0 : 代收手續費４\n",
+      "17.0 : 代收手續費４\n",
+      "17.0 : 光泉米漿 \n",
+      "13.0 : 台灣自來水\n",
+      "9.0  : 特級花枝丸\n",
       "6.0  : 代收手續費１５\n",
-      "3.0  : 代收折價卷\n",
+      "4.0  : 蟹肉糰子 \n",
+      "4.0  : 千層玉子燒\n",
+      "3.0  : 黃金厚切魚板\n",
       "3.0  : 促銷券０６\n",
-      "2.0  : 蟹肉糰子 \n",
-      "1.0  : 黃金厚切魚板\n",
+      "3.0  : 代收折價卷\n",
+      "2.0  : 黃金魚豆腐\n",
       "1.0  : 代收手續費５\n",
       "1.0  : 蘋果日報 \n"
      ]
@@ -379,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
