--- a/Product Network.ipynb
+++ b/Product Network.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#adjusting\n",
+    "\n",
+    "import igraph\n",
+    "import numpy as np\n",
+    "from itertools import filterfalse, combinations\n",
+    "\n",
+    "class NetworkConverter:\n",
+    "    def __init__(self, purchase_list):\n",
+    "        self.purchase_list = purchase_list\n",
+    "    \n",
+    "    def convert(self, method = 'degree-price', support = 0.0002):\n",
+    "        #support = int(len(self.purchase_list) * support)\n",
+    "        result = {}\n",
+    "        nodes = set()\n",
+    "        for transaction in purchase_list:\n",
+    "            itemsets = transaction['items']\n",
+    "            if len(itemsets) > 1:\n",
+    "                edge_list = list(self.find_edges_in_list(itemsets))\n",
+    "                length = len(edge_list)\n",
+    "                for edge_dict_tuple in edge_list:\n",
+    "                    edge = tuple([dic['單品名稱'] for dic in edge_dict_tuple])\n",
+    "                    weight = 1\n",
+    "                    if method == 'degree-price':\n",
+    "                        weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
+    "                    elif method == 'adjust-degree':\n",
+    "                        weight = 1 / length\n",
+    "                    else:\n",
+    "                        weight =1\n",
+    "                        \n",
+    "                    if edge in result or (edge[1], edge[0]) in result:\n",
+    "                        edge_in_list = edge if edge in result else (edge[1], edge[0])\n",
+    "                        result[edge_in_list]['count'] += 1\n",
+    "                        result[edge_in_list]['weight'] += weight\n",
+    "                    else:\n",
+    "                        result[edge] = {}\n",
+    "                        result[edge]['count'] = 1\n",
+    "                        result[edge]['weight'] = weight\n",
+    "        \n",
+    "        weight_list = []\n",
+    "        for key in list(result.keys()):\n",
+    "            weight_list.append(result[key]['weight'])    \n",
+    "        weight_support = np.percentile(weight_list, (1-support)*100)\n",
+    "        print(weight_support)\n",
+    "        for key in list(result.keys()):\n",
+    "            if result[key]['weight'] < weight_support:\n",
+    "                del result[key]\n",
+    "        for items in result.keys():\n",
+    "            for item in items:\n",
+    "                if item not in nodes:\n",
+    "                    nodes.add(item)\n",
+    "        return self.to_graph(nodes, result)\n",
+    "    \n",
+    "    \n",
+    "    def find_edges_in_list(self, itemsets):\n",
+    "        \"\"\"Return the combinations of the itemsets.\n",
+    "        \"\"\"\n",
+    "        result = []\n",
+    "        return combinations(itemsets, 2)\n",
+    "    \n",
+    "    def to_graph(self, nodes, edges):\n",
+    "        g = igraph.Graph()\n",
+    "        for node in nodes:\n",
+    "            g.add_vertex(node)\n",
+    "        for edge, attrs in edges.items():\n",
+    "            weight = attrs['weight'] if attrs['weight'] > 0 else 1\n",
+    "            g.add_edge(edge[0], edge[1], weight=weight)\n",
+    "        return ProductNerwork(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,16 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2250.0960000006307\n"
+     ]
+    }
+   ],
    "source": [
-    "product_network = converter.convert('degree', 0.001)"
+    "product_network = converter.convert('degree-price')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 153,
    "metadata": {
     "scrolled": true
    },
@@ -247,8 +330,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node number: 94\n",
-      "Edge number: 116\n"
+      "Node number: 18\n",
+      "Edge number: 10\n"
      ]
     }
    ],
@@ -265,84 +348,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.4285714285714284\n",
-      "黃金魚豆腐 千層玉子燒 手工高麗菜捲 白玉蘿蔔 究極味付蛋 海鮮魚卵棒 日式黑輪 旗魚黑輪 蟹肉糰子 關東煮本舖拉麵 讚岐烏龍麵 特級花枝丸 黃金厚切魚板\n",
+      "127.0\n",
+      "代收手續費４ 健保費代收 國民年金代\n",
       "==============\n",
-      "1.2857142857142858\n",
-      "台灣電力 玉山信用卡 台灣大哥大 國泰世華卡 花旗信用卡 欣林瓦斯費 健保費代收 台新信用卡 中華電信 台灣自來水 勞保費代收 國民年金代 代收手續費４\n",
-      "==============\n",
-      "1.0\n",
-      "蕃薯（１５元） 鮮奶茶 肉鬆飯糰 全家熱狗麵包 光泉米漿 蕃薯（２０元） 鮪魚飯糰 蕃薯（２５元） 經典原味熱狗 統一陽光無糖高纖豆漿 簡單點無加糖優酪乳 茶葉蛋（銷售用）\n",
-      "==============\n",
-      "0.875\n",
-      "麥香奶茶ＴＰ３００ （新）銷售用購物袋１８號袋 麥香紅茶ＴＰ３００ 伯朗咖啡 金牌台啤罐裝（６入） 金牌台灣啤酒 鹼性離子水\n",
-      "==============\n",
-      "0.6666666666666666\n",
-      "雅虎拍賣繳費 合庫代１５ 中信外１５ 代收手續費１５ 玉山淘寶款\n",
-      "==============\n",
-      "0.6\n",
-      "奶香綠茶３３０ＭＬ 代收折價卷 優格軟糖（Ｏｒａｎｇｅ） 優格軟糖（Ｐｅａｃｈ）\n",
-      "==============\n",
-      "0.6\n",
-      "頑皮滷蛋－原味 促銷券０６ 伊藤園蘋果紅茶 Ｃｒｅａｍ－Ｏ黑巧克力三明治餅\n",
-      "==============\n",
-      "0.5\n",
-      "自由時報 聯合報 蘋果日報\n",
-      "==============\n",
-      "0.5\n",
-      "代收手續費５ 通行繳費 ｅＴａｇ繳費\n",
-      "==============\n",
-      "0.3333333333333333\n",
+      "85.33333333333333\n",
       "戰禍邪神第１２章 戰禍邪神第１１章\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "促銷券１０ ＭＭ花生巧克力\n",
+      "72.0\n",
+      "伊藤園蘋果紅茶 促銷券０６\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "辣味ＹＵＲＯＣＫ魚薯條無 原味ＹＵＲＯＣＫ魚薯條無\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "空瓶回收（銷售用） 紅標料理米酒\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "店到店雅虎拍賣線上手續費 雅虎線上寄件\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "冰拿鐵大杯 熱拿鐵大杯\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "台中裁罰單 代收手續費６\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "寶物交易代 代收手續費２５\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "商店街取件 蝦皮取件Ｃ\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "店到店雅虎拍賣手續費 雅虎拍賣寄件\n",
-      "==============\n",
-      "0.3333333333333333\n",
+      "43.333333333333336\n",
       "ＦＰ店到店 店到店ＦＰ手續費\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "台鐵取票 台鐵手續費\n",
+      "35.0\n",
+      "台鐵手續費 台鐵取票\n",
       "==============\n",
-      "0.3333333333333333\n",
-      "商店街寄件Ｗ 蝦皮寄件Ｗ\n",
+      "34.666666666666664\n",
+      "紅標料理米酒 空瓶回收（銷售用）\n",
       "==============\n",
-      "0.3333333333333333\n",
+      "29.0\n",
+      "中華電信 台灣自來水\n",
+      "==============\n",
+      "28.333333333333332\n",
       "高鐵手續費 高鐵取票\n",
+      "==============\n",
+      "28.0\n",
+      "經典原味熱狗 全家熱狗麵包\n",
       "==============\n"
      ]
     }
@@ -364,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,23 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.0 : 茶葉蛋（銷售用）\n",
-      "25.0 : 關東煮本舖拉麵\n",
-      "12.0 : 代收手續費４\n",
-      "8.0  : 中華電信 \n",
-      "7.0  : 蕃薯（２０元）\n",
-      "7.0  : 海鮮魚卵棒\n",
-      "7.0  : 經典原味熱狗\n",
-      "6.0  : 代收手續費１５\n",
-      "5.0  : 台灣自來水\n",
-      "1.0  : 促銷券０６\n"
+      "1.0  : 代收手續費４\n"
      ]
     }
    ],
@@ -407,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
