add node weight

--- a/Mongo.ipynb
+++ b/Mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas_30 = pd.read_csv('customer_data(utf-8).csv',\n",
+    "                   index_col=1,\n",
+    "                   nrows=300000,\n",
+    "                   usecols=USE_COLUMNS,\n",
+    "                   dtype=dtype,\n",
+    "                   parse_dates=PARSE_DATES,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas_50 = pd.read_csv('customer_data(utf-8).csv',\n",
+    "                   index_col=1,\n",
+    "                   nrows=500000,\n",
+    "                   usecols=USE_COLUMNS,\n",
+    "                   dtype=dtype,\n",
+    "                   parse_dates=PARSE_DATES,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +160,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-16905a867154>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtransactions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mitems\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtransformer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'datas' is not defined"
+     ]
+    }
+   ],
    "source": [
     "transactions, items = transformer.transform(datas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +212,7 @@
        "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'pn')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
@@ -192,7 +234,7 @@
        "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'pn'), 'transactions')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {
     "scrolled": false
    },
@@ -225,7 +267,7 @@
        "   'amount': 125.0}]}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,40 +305,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': ObjectId('5cdfdab3578a4b56dc404112'),\n",
+       "[{'_id': ObjectId('5cf35481b445b855040f4265'),\n",
        "  '品號-品名稱': '58-香煙',\n",
        "  '群號-群名稱': '584-進口淡煙',\n",
        "  '銷售單價': 125.0,\n",
        "  '單品名稱': '倫敦登喜路精裁１毫克香煙'},\n",
-       " {'_id': ObjectId('5cdfdab3578a4b56dc404113'),\n",
+       " {'_id': ObjectId('5cf35481b445b855040f4266'),\n",
        "  '品號-品名稱': '58-香煙',\n",
        "  '群號-群名稱': '585-進口濃煙',\n",
        "  '銷售單價': 125.0,\n",
        "  '單品名稱': '倫敦登喜路精裁１０毫克香菸'},\n",
-       " {'_id': ObjectId('5cdfdab3578a4b56dc404114'),\n",
+       " {'_id': ObjectId('5cf35481b445b855040f4267'),\n",
        "  '品號-品名稱': '58-香煙',\n",
        "  '群號-群名稱': '584-進口淡煙',\n",
        "  '銷售單價': 125.0,\n",
        "  '單品名稱': '倫敦登喜路精裁４毫克香菸'},\n",
-       " {'_id': ObjectId('5cdfdab3578a4b56dc404115'),\n",
+       " {'_id': ObjectId('5cf35481b445b855040f4268'),\n",
        "  '品號-品名稱': '58-香煙',\n",
        "  '群號-群名稱': '584-進口淡煙',\n",
        "  '銷售單價': 125.0,\n",
        "  '單品名稱': '倫敦登喜路精裁７毫克香菸'},\n",
-       " {'_id': ObjectId('5cdfdab3578a4b56dc404116'),\n",
+       " {'_id': ObjectId('5cf35481b445b855040f4269'),\n",
        "  '品號-品名稱': '58-香煙',\n",
        "  '群號-群名稱': '584-進口淡煙',\n",
        "  '銷售單價': 125.0,\n",
        "  '單品名稱': '倫敦登喜路隨選風味香菸３號'}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 500000 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions_50, items_50 = transformer.transform(datas_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db_50 = client['pn-50']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'pn-50')"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db_50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'pn-50'), 'transactions')"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db_50.transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'餐別帶': '一般時間帶',\n",
+       " '資料日期與時間': Timestamp('2017-12-01 00:03:07'),\n",
+       " '縣市別': '台中市',\n",
+       " '店舖代號': 3047,\n",
+       " '主商圈': '住宅型',\n",
+       " '交易金額': 125.0,\n",
+       " '交易id': '00324420171201000307000118769702',\n",
+       " 'items': [{'品號-品名稱': '58-香煙',\n",
+       "   '群號-群名稱': '585-進口濃煙',\n",
+       "   '銷售單價': 125.0,\n",
+       "   '單品名稱': '倫敦登喜路精裁１０毫克香菸',\n",
+       "   'amount': 125.0}]}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions_50[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = db_50.transactions.insert_many(transactions_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_ids = db_50.items.insert_many(items_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = db_50.items.find({ '單品名稱': { '$regex': '倫敦' }}).limit(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('5cf354e3b445b8550413c289'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁１毫克香煙'},\n",
+       " {'_id': ObjectId('5cf354e3b445b8550413c28a'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '585-進口濃煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁１０毫克香菸'},\n",
+       " {'_id': ObjectId('5cf354e3b445b8550413c28b'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁４毫克香菸'},\n",
+       " {'_id': ObjectId('5cf354e3b445b8550413c28c'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路精裁７毫克香菸'},\n",
+       " {'_id': ObjectId('5cf354e3b445b8550413c28d'),\n",
+       "  '品號-品名稱': '58-香煙',\n",
+       "  '群號-群名稱': '584-進口淡煙',\n",
+       "  '銷售單價': 125.0,\n",
+       "  '單品名稱': '倫敦登喜路隨選風味香菸３號'}]"
+      ]
+     },
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
