--- a/Product Network-pruned.ipynb
+++ b/Product Network-pruned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = MongoClient('localhost', 27017)\n",
-    "db = client['pn']"
+    "db = client['pn-pruned']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23288"
+       "19633"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,6 @@
     "                            result[edge] = {}\n",
     "                            result[edge]['count'] = 1\n",
     "                            result[edge]['weight'] = weight\n",
-    "                            \n",
     "        for key in list(result.keys()):\n",
     "            if result[key]['count'] < support:\n",
     "                del result[key]\n",
@@ -197,21 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if method == 'degree-price':\n",
-    "#     weight = sum([dic['amount'] for dic in edge_dict_tuple]) / length\n",
-    "# elif method == 'degree-original':\n",
-    "#     weight = 1\n",
-    "# elif method == 'degree-mod':\n",
-    "#     weight = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -238,8 +223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node number: 94\n",
-      "Edge number: 116\n"
+      "Node number: 74\n",
+      "Edge number: 113\n"
      ]
     }
    ],
@@ -256,60 +241,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.4285714285714284\n",
-      "黃金厚切魚板 讚岐烏龍麵 究極味付蛋 海鮮魚卵棒 蟹肉糰子 關東煮本舖拉麵 手工高麗菜捲 旗魚黑輪 白玉蘿蔔 特級花枝丸 黃金魚豆腐 千層玉子燒 日式黑輪\n",
-      "==============\n",
-      "1.2857142857142858\n",
-      "玉山信用卡 中華電信 欣林瓦斯費 國泰世華卡 台新信用卡 花旗信用卡 健保費代收 國民年金代 台灣大哥大 勞保費代收 代收手續費４ 台灣自來水 台灣電力\n",
+      "4.0\n",
+      "白玉蘿蔔 手工高麗菜捲 旗魚黑輪 海鮮魚卵棒 黃金魚豆腐 蟹肉糰子 究極味付蛋 日式黑輪 讚岐烏龍麵 野菜多多魚餅 特級花枝丸 黃金厚切魚板 千層玉子燒 筊白筍 關東煮本舖拉麵\n",
       "==============\n",
       "1.0\n",
-      "全家熱狗麵包 經典原味熱狗 蕃薯（２５元） 簡單點無加糖優酪乳 茶葉蛋（銷售用） 鮪魚飯糰 蕃薯（２０元） 統一陽光無糖高纖豆漿 肉鬆飯糰 光泉米漿 鮮奶茶 蕃薯（１５元）\n",
+      "全家熱狗麵包 蕃薯（１５元） 統一陽光無糖高纖豆漿 茶葉蛋（銷售用） 鮪魚飯糰 肉鬆飯糰 特濃咖啡拿鐵 ＬＣＡ活菌原味發酵乳 爆濃起司熱狗 簡單點無加糖優酪乳 蕃薯（２５元） 光泉米漿 鮮奶茶 經典原味熱狗 蕃薯（２０元） 香蕉單入\n",
       "==============\n",
-      "0.875\n",
-      "金牌台灣啤酒 金牌台啤罐裝（６入） 麥香紅茶ＴＰ３００ 鹼性離子水 麥香奶茶ＴＰ３００ （新）銷售用購物袋１８號袋 伯朗咖啡\n",
-      "==============\n",
-      "0.6666666666666666\n",
-      "玉山淘寶款 合庫代１５ 中信外１５ 雅虎拍賣繳費 代收手續費１５\n",
+      "0.9333333333333333\n",
+      "伯朗咖啡 藍山咖啡 （新）銷售用購物袋１８號袋 七星１０毫克硬盒香煙 義美奶茶 鹼性離子水 金牌台灣啤酒５００ＭＬ 天然水２．２Ｌ 麥香奶茶ＴＰ３００ 金牌台啤罐裝（６入） （新）４５號銷售用購物袋 金牌台灣啤酒 麥香紅茶ＴＰ３００ 天然水\n",
       "==============\n",
       "0.6\n",
-      "Ｃｒｅａｍ－Ｏ黑巧克力三明治餅 伊藤園蘋果紅茶 促銷券０６ 頑皮滷蛋－原味\n",
+      "優格軟糖（Ｏｒａｎｇｅ） 奶香綠茶３３０ＭＬ 代收折價卷 優格軟糖（Ｐｅａｃｈ）\n",
       "==============\n",
       "0.6\n",
-      "奶香綠茶３３０ＭＬ 優格軟糖（Ｏｒａｎｇｅ） 代收折價卷 優格軟糖（Ｐｅａｃｈ）\n",
+      "頑皮滷蛋－原味 伊藤園蘋果紅茶 促銷券０６ Ｃｒｅａｍ－Ｏ黑巧克力三明治餅\n",
       "==============\n",
       "0.5\n",
-      "蘋果日報 聯合報 自由時報\n",
-      "==============\n",
-      "0.5\n",
-      "ｅＴａｇ繳費 通行繳費 代收手續費５\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "蝦皮寄件Ｗ 商店街寄件Ｗ\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "雅虎線上寄件 店到店雅虎拍賣線上手續費\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "戰禍邪神第１２章 戰禍邪神第１１章\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "店到店ＦＰ手續費 ＦＰ店到店\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "寶物交易代 代收手續費２５\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "高鐵取票 高鐵手續費\n",
+      "聯合報 蘋果日報 自由時報\n",
       "==============\n",
       "0.3333333333333333\n",
       "促銷券１０ ＭＭ花生巧克力\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "黑巧杏仁乳加 牛奶杏仁乳加\n",
+      "==============\n",
+      "0.3333333333333333\n",
+      "葡萄冰茶 蘋果冰茶\n",
       "==============\n",
       "0.3333333333333333\n",
       "原味ＹＵＲＯＣＫ魚薯條無 辣味ＹＵＲＯＣＫ魚薯條無\n",
@@ -318,22 +282,16 @@
       "冰拿鐵大杯 熱拿鐵大杯\n",
       "==============\n",
       "0.3333333333333333\n",
-      "紅標料理米酒 空瓶回收（銷售用）\n",
+      "大口法香烤雞飯糰 熱拿鐵中杯\n",
       "==============\n",
       "0.3333333333333333\n",
-      "店到店雅虎拍賣手續費 雅虎拍賣寄件\n",
+      "戰禍邪神第１２章 戰禍邪神第１１章\n",
       "==============\n",
       "0.3333333333333333\n",
-      "台鐵手續費 台鐵取票\n",
+      "空瓶回收（銷售用） 紅標料理米酒\n",
       "==============\n",
       "0.3333333333333333\n",
-      "台中裁罰單 代收手續費６\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "蝦皮寄件Ｆ 商店街寄件Ｆ\n",
-      "==============\n",
-      "0.3333333333333333\n",
-      "商店街取件 蝦皮取件Ｃ\n",
+      "大口奶油蕈菇起司雞排飯糰 特濃抹茶拿鐵\n",
       "==============\n"
      ]
     }
@@ -345,6 +303,23 @@
     "    print(' '.join(community['items']))\n",
     "    print('==============')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('D:\\MIS_Project\\product-netowork-demo\\src\\default_pruned.json', 'w', encoding='utf-8') as file:\n",
+    "    file.write(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -410,21 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = product_network.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data.json', 'w', encoding='utf-8') as file:\n",
-    "    file.write(data)"
    ]
   },
   {
