--- a/Product Network-calculate_node_weight.ipynb
+++ b/Product Network-calculate_node_weight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "936409"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,20 +251,17 @@
     "#             weight_sum = sum([edge['weight'] for edge in subgraph.es])\n",
     "            weight_sum = sum([edge['weight'] for edge in subgraph.es]) * (nums) / nums / (nums + 1)\n",
     "#             comm_name = [ node['name'] for node in subgraph.vs]\n",
-    "            ###############################\n",
+    "            ############## added #################\n",
     "            items_weight_dict = {}\n",
     "            for node in subgraph.vs:\n",
     "                edges_id = subgraph.incident(node['name'], mode=OUT)\n",
-    "#                 node_weight_sum = 0\n",
-    "#                 for e in edges_id:\n",
-    "#                     node_weight_sum += subgraph.es[e][\"weight\"]\n",
     "                node_weight = sum([subgraph.es[e][\"weight\"] for e in edges_id])\n",
     "                items_weight_dict[node['name']] = node_weight\n",
     "            if len(subgraph.vs) > 3:\n",
     "                core = max(items_weight_dict, key=lambda x: items_weight_dict[x])\n",
     "            else:\n",
     "                core = ''\n",
-    "            ###############################\n",
+    "            ######################################\n",
     "            dic = {\n",
     "                'weight': weight_sum,\n",
     "#                 'items': comm_name\n",
@@ -317,11 +314,7 @@
     "            node_attr['degree'] = node.degree()\n",
     "            ######################## added ######################\n",
     "            if node['name'] in core_list:\n",
-    "                node_attr['border'] = 5\n",
-    "#                 node_attr['core'] = True\n",
-    "            else:\n",
-    "                node_attr['border'] = 0\n",
-    "#                 node_attr['core'] = False\n",
+    "                node_attr['core'] = True\n",
     "            #####################################################\n",
     "            nodes.append(node_attr)\n",
     "        return json.dumps({\n",
@@ -332,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 198,
    "metadata": {
     "scrolled": true
    },
@@ -442,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 199,
    "metadata": {
     "scrolled": true
    },
@@ -469,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 200,
    "metadata": {
     "scrolled": false
    },
@@ -623,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 201,
    "metadata": {
     "scrolled": false
    },
@@ -828,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 205,
    "metadata": {
     "scrolled": true
    },
@@ -898,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 207,
    "metadata": {
     "scrolled": false
    },
@@ -1148,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 209,
    "metadata": {
     "scrolled": true
    },
@@ -1192,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 210,
    "metadata": {
     "scrolled": false
    },
@@ -1364,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
